need to mysql connect

--- a/jysInfo/src/main/resources/application.yml
+++ b/jysInfo/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+  jpa:
+    defer-datasource-initialization: true
 jpa:
   hibernate:
     ddl-auto: create
