university repository complete

--- a/jysInfo/build.gradle
+++ b/jysInfo/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 	}
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 
 	// https://mvnrepository.com/artifact/org.apache.poi/poi
 	implementation group: 'org.apache.poi', name: 'poi', version: '4.1.2'
