--- a/jysInfo/src/main/resources/application.properties
+++ b/jysInfo/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/jys_info?serverTimezone=UTC&ch
 spring.datasource.username=root
 spring.datasource.password=rugate060404
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
